--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
        "experimentalDecorators": true
     },
     "include": [
-        "src/**/*.ts"
+        "src/**/*.ts",
     ],
     "exclude": [
        "node_modules"
